Fix Message alignment
See #385

--- a/src/assets/toolkit/styles/components/message.css
+++ b/src/assets/toolkit/styles/components/message.css
@@ -1,29 +1,51 @@
 /** @define Message */
 
 :root {
-  --Message-padding: var(--space-xs);
   --Message-background: var(--color-gray);
-  --Message-warning-background: var(--color-orange);
-  --Message-warning-color: var(--color-white);
+  --Message-background-warning: var(--color-orange);
+  --Message-color-warning: var(--color-white);
+  --Message-padding: var(--space-xs);
 }
+
+/**
+ * 1. Display message and close button in a centered row.
+ * 2. Push message and close button as far apart as possible.
+ * 3. Condense line height in case it breaks to multiple lines.
+ */
 
 .Message {
-  display: flex;
-  padding: var(--Message-padding);
+  align-items: center; /* 1 */
   background: var(--Message-background);
-  justify-content: space-between;
-}
-
-.Message a {
-  color: inherit;
-}
-
-.Message-close {
-  color: inherit;
-  cursor: pointer;
+  display: flex; /* 1, 2 */
+  justify-content: space-between; /* 2 */
+  line-height: var(--line-height-sm); /* 3 */
+  padding: var(--Message-padding);
 }
 
 .Message--warning {
-  background: var(--Message-warning-background);
-  color: var(--Message-warning-color);
+  background: var(--Message-background-warning);
+  color: var(--Message-color-warning);
+}
+
+/**
+ * Inherit parent text color for links when blue is hideous against background.
+ */
+
+.Message--warning a {
+  color: inherit;
+}
+
+/**
+ * 1. Close icon should be the same color as the parent text color.
+ * 2. Easy way to collapse extra whitespace between button edge and icon.
+ * 3. Make icon a little larger than the parent text size.
+ * 4. Put some space between message and close button.
+ */
+
+.Message-close {
+  color: inherit; /* 1 */
+  cursor: pointer;
+  display: flex; /* 2 */
+  font-size: var(--font-size-md); /* 3 */
+  margin-left: var(--space-sm); /* 4 */
 }
